# llm-jupyter

./: README.md  llm_jupyter.py  pyproject.toml
.github/workflows/: publish.yml  test.yml
llm_jupyter/: commands.py  magic.py
tests/: conftest.py  test_commands.py  test_ipython.py  test_magic_functions.py  test_python.py
