[project]
name = "llm-jupyter"
version = "0.0.2"
description = "Run a IPython interpreter in the LLM virtual environment"
readme = "README.md"
authors = [{name = "Simon Willison"}]
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "ipython",
    "llm",
]

[project.urls]
Homepage = "https://github.com/lucasrcezimbra/llm-jupyter"
Changelog = "https://github.com/lucasrcezimbra/llm-jupyter/releases"
Issues = "https://github.com/lucasrcezimbra/llm-jupyter/issues"
CI = "https://github.com/lucasrcezimbra/llm-jupyter/actions"

[project.entry-points.llm]
python = "llm_jupyter"

[project.optional-dependencies]
test = ["pytest"]
